prosilver, Prosilver Special Edition: workaround alignment issues in memberlist single profile view
This only affects online users and it is caused by the left-profiles mod

--- a/styles/prosilver/theme/colours.css
+++ b/styles/prosilver/theme/colours.css
@@ -660,6 +660,9 @@ fieldset.polls dd div {
 	margin-top: 5px;
 }
 
+.online2 { margin-top: 0px; }
+.online2 dt { margin-top: 0px; }
+
 /*  	
 --------------------------------------------------------------
 Colours and backgrounds for buttons.css
